2004-12-05  Bruno Haible  <bruno@clisp.org>

	* eval.d (interpret_bytecode_ PROGV): Fix GC-safety bug introduced on
	2003-05-20.

2004-08-18  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (SSHUP): replaced gnudist and cons with podval

2004-10-29  Bruno Haible  <bruno@clisp.org>

	* aridecl.d (wbitc): New macro.
	* intelem.d (UQ_to_I): Use it instead of bitc.

2004-10-28  Bruno Haible  <bruno@clisp.org>

	* Makefile.devel (SBCL_VERSION, SBCL_SOURCE_FILE, SBCL_SOURCE_URL): New
	variables.
	(check-sbcl): New target.

2004-10-10  Bruno Haible  <bruno@clisp.org>

	Fix GC crash after a GC was triggered while a break loop was active.
	* lispbibl.d (bt_beyond_stack_p, with_saved_back_trace): Correctly
	parenthesize argument expressions.
	* debug.d (driver, break_driver): Initialize bt_next to back_trace,
	not NULL. Otherwise the bt_caller fields are not updated during GCs,
	and after the function is left the next GC crashes. Fixes bug
	introduced on 2002-11-15.

2004-10-09  Bruno Haible  <bruno@clisp.org>

	* clos.lisp (slot-unbound): Restore the error message that was thrown
	away on 2003-05-01.

2004-10-07  Bruno Haible  <bruno@clisp.org>

	* debug.d (read_form): Don't use ls_avail_p to test whether the
	input stream is interactive, since the clear_input call has been
	removed on 2003-01-21.

2004-10-06  Bruno Haible  <bruno@clisp.org>

	* time.d (SYS::DELTA4): Fix error message's argument. Signal an error
	if the shift is >= 32. Fix 64-bit computations.

2004-10-06  Bruno Haible  <bruno@clisp.org>

	* control.d (MULTIPLE-VALUE-SETQ): Rewritten, to fix three bugs
	introduced since 2003-05-20: GC-safety bug when assigning Car(STACK_0),
	side effect on variable list given in the original form, GC-safety bug
	on return value.

2004-09-23  Bruno Haible  <bruno@clisp.org>

	* sequence.d (REVERSE): Fix wrong index check when the argument is a
	displaced vector. Fixes bug introduced on 1999-11-08.

2004-08-28  Bruno Haible  <bruno@clisp.org>
